--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   
   <title>Home</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -51,16 +50,16 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="https://lifestylemonster.github.io/consultoriapersonalizadacompleta/" target="_blank"><span class="mbri-growing-chart mbr-iconfont mbr-iconfont-btn" style="font-size: 35px;"></span>CONSULTORIA ONLINE</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://www.youtube.com/channel/UCHH_7GZM1-6yOVtyZLuivBA/playlists" target="_blank"><span class="mbri-bulleted-list mbr-iconfont mbr-iconfont-btn" style="font-size: 35px;"></span>TREINOS</a></li><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://www.youtube.com/playlist?list=PL0jgN4oQcPT5Lv_iDhME5HjcGagKvNHxy" target="_blank"><span class="mbri-pages mbr-iconfont mbr-iconfont-btn" style="font-size: 35px;"></span>DIETAS E RECEITAS FITNESS</a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://api.whatsapp.com/send?phone=5516992804827&text=Ol%C3%A1%2C%20vim%20pelo%20site%20e%20Gostaria%20de%20saber%20sobre%20a%20consultoria" target="_blank"><span class="mbri-growing-chart mbr-iconfont mbr-iconfont-btn" style="font-size: 35px;"></span>CONSULTORIA ONLINE</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://lifestylemonster.github.io/treinodeguteos/" target="_blank"><span class="mbri-bulleted-list mbr-iconfont mbr-iconfont-btn" style="font-size: 35px;"></span>TREINOS E DICAS</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://www.youtube.com/channel/UCHH_7GZM1-6yOVtyZLuivBA/playlists" target="_blank"><span class="mbrib-save mbr-iconfont mbr-iconfont-btn" style="font-size: 35px;"></span>BAIXAR LIVRO DE RECEITAS FITNESS</a></li></ul>
+                </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white-outline display-4" href="https://lifestylemonster.midhaz.com/?ordenacao=nome-az" target="_blank"><span class="mbri-cart-add mbr-iconfont mbr-iconfont-btn" style="font-size: 40px;"></span>
                     ACESSE A LOJA &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section class="mbr-section content4 cid-s4Uja3m7nl" id="content4-2">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="mbr-section content4 cid-s4Uja3m7nl" id="content4-2">
 
     
 
@@ -106,7 +105,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1CSqQArAzM4lC9u6stioEtZFWf1Q2Wu5SqJfTsjakvIjHeFSjGTawB59I9JGNbb3Cy+30TLJrzllCi6RgdGbq6LYaJB6H4om9EwG8c5YrkzxXAqAP7gYgwdWY32hW1c9">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="NOSlNM04LL1fimfi70i6E0cLXqEZse7GvM6gXlYyHv+n5nT/nY6MY4sl0K5QcFgAbj/KUGaYlHT1vCovgao3rx/mCeXKRquWkQvO9zdaeQSxElCbrHfrMn/OWeHAKGxI">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Em breve a nossa Equipe entrará em contato, para você se consultar com um dos nossos Profissionais, OBRIGADO!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -263,12 +262,12 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
