--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
                     <a class="nav-link link text-white display-4" href="https://www.youtube.com/playlist?list=PL0jgN4oQcPT5Lv_iDhME5HjcGagKvNHxy" target="_blank"><span class="mbri-pages mbr-iconfont mbr-iconfont-btn" style="font-size: 35px;"></span>DIETAS E RECEITAS FITNESS</a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white-outline display-4" href="https://lifestylemonster.midhaz.com/?ordenacao=nome-az" target="_blank"><span class="mbri-cart-add mbr-iconfont mbr-iconfont-btn" style="font-size: 40px;"></span>
-                    ACESSE A LOJA &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></div>
+                    ACESSE A LOJA</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="mbr-section content4 cid-s4Uja3m7nl" id="content4-2">
+<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="mbr-section content4 cid-s4Uja3m7nl" id="content4-2">
 
     
 
@@ -105,7 +105,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sEbUEBsb39Uq0WGWwFalRL8mrPv+dQ/9GfV7h4YZfFB//Dy//Grz4yh9cl9nmcsi2nnwoZX+MGlroDO2AG9Gy53wHCNxkjx0d21QgxXvNZwCgp49J1yaIX3JQlrKDKLK">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="V4IbmDtH5pWlpiITWHZHfCOi45Bdv9UH+Ms6U1SqGXNauiaPXmvFHh34i/qO/2TzOiepg0K3hilvYw9LbbQtGLCWzoRhyZ4z7ddYhZNPQIUEg3d4slAqYCM3ttW1O7i2">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Em breve a nossa Equipe entrará em contato, para você se consultar com um dos nossos Profissionais, OBRIGADO!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
