--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="https://lifestylemonster.github.io/consultoriapersonalizadacompleta/" target="_blank"><span class="mbri-growing-chart mbr-iconfont mbr-iconfont-btn" style="font-size: 35px;"></span>CONSULTORIA ONLINE</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://www.youtube.com/channel/UCHH_7GZM1-6yOVtyZLuivBA/playlists" target="_blank"><span class="mbri-bulleted-list mbr-iconfont mbr-iconfont-btn" style="font-size: 35px;"></span>TREINOS</a></li><li class="nav-item">
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="https://www.youtube.com/channel/UCHH_7GZM1-6yOVtyZLuivBA/playlists" target="_blank"><span class="mbri-bulleted-list mbr-iconfont mbr-iconfont-btn" style="font-size: 35px;"></span>TREINOS</a></li><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://www.youtube.com/playlist?list=PL0jgN4oQcPT5Lv_iDhME5HjcGagKvNHxy" target="_blank"><span class="mbri-pages mbr-iconfont mbr-iconfont-btn" style="font-size: 35px;"></span>DIETAS E RECEITAS FITNESS</a>
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white-outline display-4" href="https://lifestylemonster.midhaz.com/?ordenacao=nome-az" target="_blank"><span class="mbri-cart-add mbr-iconfont mbr-iconfont-btn" style="font-size: 40px;"></span>
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="mbr-section content4 cid-s4Uja3m7nl" id="content4-2">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own site for free</a></section><section class="mbr-section content4 cid-s4Uja3m7nl" id="content4-2">
 
     
 
@@ -105,7 +105,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="FoI5D0tQJ6K4JRdkgNs73sRnVNVPqqgjPAVTEvsoULJM7qsgKX8Z+2PJ8b2crlmpX94G0QS6ngOZkoHevIKGYlNIUDmd6ZFVQEBxEkjw+uP/W7huN9yTFOxixCZX/X/E">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Oj5HxrcBy5d2Vay5utQt4GVjotHz2pllgEZ+59BmhccToO/31xk/6t7FE+iXMXEyXGkvr2XkjrRabUnoGN//JqCtPML6GgmMcHPWG4GotcCiVCBOKlTve8Qlq98r0HQw">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Em breve a nossa Equipe entrará em contato, para você se consultar com um dos nossos Profissionais, OBRIGADO!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
