--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own site for free</a></section><section class="mbr-section content4 cid-s4Uja3m7nl" id="content4-2">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section content4 cid-s4Uja3m7nl" id="content4-2">
 
     
 
@@ -105,7 +105,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Oj5HxrcBy5d2Vay5utQt4GVjotHz2pllgEZ+59BmhccToO/31xk/6t7FE+iXMXEyXGkvr2XkjrRabUnoGN//JqCtPML6GgmMcHPWG4GotcCiVCBOKlTve8Qlq98r0HQw">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="JYMpcNnBbB4g2JlFXHxGEiRHTuRpo7ZXS504Mqys2BuPiqUjloxz/0JN8ZVTkZjLwbWFE1yzDv5Qpt9AZq4Xf4EFmt6kZd8HoWEpFLAtWUuapoRV5KiB1uTuSxbRjpXA">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Em breve a nossa Equipe entrará em contato, para você se consultar com um dos nossos Profissionais, OBRIGADO!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -160,7 +160,7 @@
                 <div class="plan-body">
                     <div class="plan-list align-center">
                         <ul class="list-group list-group-flush mbr-fonts-style display-7">
-                            <li class="list-group-item"><em><strong>PAGUE 1 E GANHE 2 </strong></em></li><li class="list-group-item"><em>&nbsp;Acompanhamento dos resultados, modificações da dieta de acordo com objetivo, uma equipe Especializada em Nutrição a disposição para os melhores resultados. A consultoria mais barata e Qualificada do Brasil</em></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;">3 Messes de Acompanhamento</span><br></li>
+                            <li class="list-group-item"><em><strong>PAGUE 1 E GANHE 2 </strong></em></li><li class="list-group-item"><em>&nbsp;Acompanhamento dos resultados, modificações da dieta de acordo com objetivo, uma equipe Especializada em Nutrição a disposição para os melhores resultados. A consultoria mais barata e Qualificada do Brasil</em></li><li class="list-group-item"><span style="background-color: transparent; font-size: 1rem;">3 Meses de Acompanhamento</span><br></li>
                         </ul>
                     </div>
                     <div class="mbr-section-btn text-center py-4 pb-5"><a href="https://lifestylemonster.github.io/PlanoNutricional/" class="btn btn-primary display-4" target="_blank"><span class="mobi-mbri mobi-mbri-touch mbr-iconfont mbr-iconfont-btn"></span>ACESSE E CONHEÇA</a></div>
@@ -182,7 +182,7 @@
                     <div class="plan-list align-center">
                         <ul class="list-group list-group-flush mbr-fonts-style display-7">
                             <li class="list-group-item"><em><strong>PAGUE 1 E GANHE 2</strong></em></li><li class="list-group-item">Treinos e Dieta Pesonalizados de acordo com Objetivo, acompanhamento dos resultados semanalmente, os melhores Profissionais a disposição, uma Equipe de Especialistas Plenamente capacitatos.&nbsp;<em>A consultoria mais barata e Qualificada do Brasil</em></li>
-                            <li class="list-group-item">3 messes de Acompanhamento</li>
+                            <li class="list-group-item">3 Meses de Acompanhamento</li>
                         </ul>
                     </div>
                     <div class="mbr-section-btn text-center py-4 pb-5"><a href="https://lifestylemonster.github.io/consultoriapersonalizadacompleta/" class="btn btn-primary display-4" target="_blank"><span class="mobi-mbri mobi-mbri-touch mbr-iconfont mbr-iconfont-btn"></span>ACESSE E CONHEÇA</a></div>
