--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="https://www.youtube.com/channel/UCHH_7GZM1-6yOVtyZLuivBA/playlists" target="_blank"><span class="mbri-bulleted-list mbr-iconfont mbr-iconfont-btn" style="font-size: 35px;"></span>TREINOS</a></li><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://www.youtube.com/playlist?list=PL0jgN4oQcPT5Lv_iDhME5HjcGagKvNHxy" target="_blank"><span class="mbri-pages mbr-iconfont mbr-iconfont-btn" style="font-size: 35px;"></span>DIETAS E RECEITAS FITNESS</a>
-                </li></ul>
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="https://www.youtube.com/playlist?list=PL0jgN4oQcPT5Lv_iDhME5HjcGagKvNHxy" target="_blank"><span class="mbri-pages mbr-iconfont mbr-iconfont-btn" style="font-size: 35px;"></span>DIETAS</a>
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://www.youtube.com/channel/UCHH_7GZM1-6yOVtyZLuivBA/playlists" target="_blank"><span class="mbri-bulleted-list mbr-iconfont mbr-iconfont-btn" style="font-size: 35px;"></span>TREINOS</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="https://www.youtube.com/channel/UCHH_7GZM1-6yOVtyZLuivBA/playlists" target="_blank"><span class="mbri-opened-folder mbr-iconfont mbr-iconfont-btn" style="font-size: 35px;"></span>CONSULTORIAS</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white-outline display-4" href="https://lifestylemonster.midhaz.com/?ordenacao=nome-az" target="_blank"><span class="mbri-cart-add mbr-iconfont mbr-iconfont-btn" style="font-size: 40px;"></span>
                     ACESSE A LOJA</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="mbr-section content4 cid-s4Uja3m7nl" id="content4-2">
+<section class="engine"><a href="https://mobirise.info/z">best free html templates</a></section><section class="mbr-section content4 cid-s4Uja3m7nl" id="content4-2">
 
     
 
@@ -105,7 +105,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BCrwJobHcV51U/XQZEnYblrXCcBYdZYSSHEku+3g//UWs/RJlucCAmcBYODlwKw5KAzlitlojSkd2GN1dIWBYN4xNikysg/W46UXsxB5hKHowpin7c2blH8Kr/gt+zwB">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4M3eV/oM8qzrT0g4qaLJk/ovmmHb2WvAh5YaEv9joFiJLkE3MsbJvEuF+vb08IsYczwUAuX/XFTt6rlSEh/WEm+vBHxhVwywu6hXpHchVUhU9+92m3mazFM1Du6aOvt3">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Em breve a nossa Equipe entrará em contato, para você se consultar com um dos nossos Profissionais, OBRIGADO!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
